--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       overflow: hidden;
     }
     .fish {
-      width: 50px;
-      height: 50px;
       position: absolute;
+      font-size: 40px;
       cursor: pointer;
+      user-select: none;
       transition: transform 0.2s;
     }
     .fish:hover {
-      transform: scale(1.2);
+      transform: scale(1.3);
     }
   </style>
 </head>
@@ -56,12 +56,11 @@
     const timeEl = document.getElementById("time");
     const gameArea = document.getElementById("game-area");
 
-    // Crear peces aleatoriamente
     function spawnFish() {
       if (timeLeft <= 0) return;
 
-      const fish = document.createElement("img");
-      fish.src = "https://upload.wikimedia.org/wikipedia/commons/0/0b/Goldfish3.jpg"; 
+      const fish = document.createElement("div");
+      fish.textContent = "🐟";
       fish.classList.add("fish");
       fish.style.top = Math.random() * (gameArea.clientHeight - 50) + "px";
       fish.style.left = Math.random() * (gameArea.clientWidth - 50) + "px";
@@ -77,7 +76,6 @@
       setTimeout(() => fish.remove(), 2000);
     }
 
-    // Temporizador
     function countdown() {
       if (timeLeft > 0) {
         timeLeft--;
@@ -88,11 +86,9 @@
       }
     }
 
-    // Iniciar juego
     setInterval(spawnFish, 1000);
     countdown();
 
-    // Registrar Service Worker
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("./sw.js")
         .then(() => console.log("✅ Service Worker registrado"))
